--- a/production.ini
+++ b/production.ini
@@ -12,6 +12,9 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = pyramid_chameleon
+pipeline =
+    gzip
+    app
 
 ###
 # wsgi server configuration
@@ -20,7 +23,7 @@ pyramid.includes = pyramid_chameleon
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
-port = 6543
+port = 8080
 
 ###
 # logging configuration
@@ -53,3 +56,7 @@ formatter = generic
 
 [formatter_generic]
 format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+[filter:gzip]
+use = egg:Paste#gzip
+compress_level = 6
