--- a/development.ini
+++ b/development.ini
@@ -5,7 +5,7 @@
 
 [app:main]
 use = egg:Pyramidstarter
-
+filter-with=gzip
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
@@ -25,7 +25,7 @@ pyramid.includes = pyramid_chameleon
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
-port = 6543
+port = 8080
 
 ###
 # logging configuration
@@ -58,3 +58,8 @@ formatter = generic
 
 [formatter_generic]
 format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+
+[filter:gzip]
+use = egg:Paste#gzip
+compress_level = 6
