--- a/production.ini
+++ b/production.ini
@@ -5,16 +5,13 @@
 
 [app:main]
 use = egg:Pyramidstarter
-
+filter-with=gzip
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = pyramid_chameleon
-pipeline =
-    gzip
-    app
 
 ###
 # wsgi server configuration
