--- a/production.ini
+++ b/production.ini
@@ -5,7 +5,7 @@
 
 [app:main]
 use = egg:Pyramidstarter
-pyramid.reload_templates = false
+pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
