--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 email_details.json
 addressbook.csv
+pyramidstarter/static/bootstrap
+pyramidstarter/static/bootstrap-slider
+pyramidstarter/static/bootstrap-switch
+pyramidstarter/static/bootstrap-tour
+pyramidstarter/static/Font-Awesome-Pro
+pyramidstarter/static/bootswatch
+pyramidstarter/static/shepherd
