:see_no_evil: Stop committing .idea files!

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ pyramidstarter/static/bootstrap-tour
 pyramidstarter/static/Font-Awesome-Pro
 pyramidstarter/static/bootswatch
 pyramidstarter/static/shepherd
+.ideas
+.openshift
