--- a/production.ini
+++ b/production.ini
@@ -20,6 +20,7 @@ pyramid.includes = pyramid_mako
 use = egg:waitress#main
 host = 0.0.0.0
 port = 8080
+url_scheme = https
 
 ###
 # logging configuration
