:hammer: previous change of name was imperfect

--- a/production.ini
+++ b/production.ini
@@ -40,7 +40,7 @@ keys = generic
 level = WARN
 handlers = console
 
-[logger_pyramidstarter]
+[logger_direvo]
 level = WARN
 handlers =
 qualname = direvo
